- added support for findbugs. - Identifiable.java: created a default implementation for equals, hashCode and compareTo to reduce redundant code.